--- a/templates/passwords.html
+++ b/templates/passwords.html
@@ -18,25 +18,24 @@
         <!-- {{ form.csrf_token }} -->
         <div class="container">
 
-                
             <div class="mb-3">
                 <label for="uppercase">A-Z</label>
-                <input checked type="checkbox" id="uppercase" name="uppercase">
+                <input checked type="checkbox" id="uppercase" name="uppercase" onchange="updateCheckboxState('uppercase')">
             </div>
             
             <div class="mb-3">
                 <label for="lowercase">a-z</label>
-                <input checked type="checkbox" id="lowercase" name="lowercase">
+                <input checked type="checkbox" id="lowercase" name="lowercase" onchange="updateCheckboxState('lowercase')">
             </div>
             
             <div class="mb-3">
                 <label for="numbers">0-9</label>
-                <input checked type="checkbox" id="numbers" name="numbers">
+                <input checked type="checkbox" id="numbers" name="numbers" onchange="updateCheckboxState('numbers')">
             </div>
             
             <div class="mb-3">
                 <label for="symbols">!@#$%^&*()_+</label>
-                <input checked type="checkbox" id="symbols" name="symbols">
+                <input checked type="checkbox" id="symbols" name="symbols" onchange="updateCheckboxState('symbols')">
             </div>
             
             <div class="mb-3">
