--- a/templates/layout.html
+++ b/templates/layout.html
@@ -30,11 +30,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
-                    {% if user %}
+                    {% if session["user_id"] %}
                         <ul class="navbar-nav me-auto mt-2">
-                            <li class="nav-item"><a class="nav-link" href="/passwords">Passwords</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/generator">Generator</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/pass_manager">Passwords</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/pass_generator">Generator</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/logout">Log Out</a></li>
