--- a/templates/pass_manager.html
+++ b/templates/pass_manager.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    PASSWORD MANAGER
+    PASSMANAGER
 {% endblock %}
 
 {% block main %}
@@ -44,7 +44,10 @@
                                 </td>
                                 <td><button type="button" class="toggle-visibility btn btn-outline-primary" name="toggle-visibility" onclick="toggleVisibility('{{ loop.index0 }}')">Show</button></td>
                                 <td><button type="button" class="edit btn btn-outline-primary" name="edit">Edit</button></td>
-                                <td><button type="button" class="delete btn btn-outline-danger" name="delete">Delete</button></td>
+                                <td>
+                                    <button type="button" class="delete btn btn-outline-danger" name="delete" data-website="{{ entry[0] }}" onclick="setDeleteValues('{{ entry[0] }}')">Delete</button>
+                                    <span class="hidden" data-password-id="{{ entry[3] }}"></span> <!-- Hidden Password ID for deletion purposes -->
+                                </td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -57,6 +60,13 @@
         <p> Please log in to access the password manager </p>    
         {% endif %}
     </div>
+    
+    <!-- Hidden input for delete_website and password_id -->
+    <form id="delete-password-form" action="/delete_password" method="post">
+        <input type="hidden" id="delete-website" name="delete_website" value="">
+        <input type="hidden" id="delete-password-id" name="delete_password_id" value="">
+    </form>
+
             
 {% endblock %}
             
