landing pictures and small styling applied

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,14 @@
 
 {% block main %}
 
-<h1>CastlePass ⛫</h1>
-<p>A fortress for your passwords</p>
+<h1 class="title display-1 mt-2">CastlePass ⛫</h1>
+<p class="tagline display-4">A <strong><mark>fortress</mark></strong> for your passwords.</p>
+<div class="castle-img mx-auto">
+    <img src="/static/images/castle3.png" class="img-fluid" alt="castle image">
+</div>
+<div class="small-castle-img mx-auto pt-3">
+    <img src="/static/images/castle5.png" alt="castle image">
+</div>
    
 
 {% endblock %}
