--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
         
         <script src="/static/script.js"></script>
         
-        <link href="/static/favicon.ico" rel="icon">
+        <link href="/static/images/castle5.png" rel="icon">
 
         <link href="/static/styles.css" rel="stylesheet">
 
@@ -59,7 +59,7 @@
         {% endif %}
 
       
-        <main class="container-fluid py-5 text-center">
+        <main class="container-fluid pt-5 text-center">
             {% block main %}{% endblock %}
         </main>
 
