--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,12 @@
-/* Font size for brand */
+html {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+  }
+  
+  /* Font size for brand */
 nav .navbar-brand
 {
     font-size: xx-large;
@@ -8,4 +16,40 @@ nav .navbar-brand
 .hidden
 {
     display: none;
+}
+
+@media (max-width: 600px) {
+    .castle-img {
+        max-width:10%;
+        display: none; 
+    }
+    .small-castle-img img{
+        max-width: 80%;
+    }
+    .title {
+        font-size: 4rem;
+    }
+    .tagline {
+        font-size: 1.3rem;
+    }
+}
+
+@media (min-width: 601px) and (max-width: 1200px) {
+    .small-castle-img {
+        display: none;
+    }
+    .castle-img {
+        max-width: 100%; 
+        margin: 0 auto; 
+    }
+}
+
+@media (min-width: 1201px) {
+    .small-castle-img {
+        display: none;
+    }
+    .castle-img {
+        max-width: 70%; 
+        margin: 0 auto; 
+    }
 }
